--- a/.github/workflows/nodeci.yml
+++ b/.github/workflows/nodeci.yml
@@ -9,26 +9,25 @@ jobs:
     name: Build and deploy to deploy branch
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
-      - name: Use Node.js
-      - uses: actions/setup-node@v2
-        with:
-          node-version: '16.14.0'
-          cache: 'npm'
-      - name: install rsync
-      - run: sudo apt install rsync
-      - name: install rsync
-      - run: |
-          cd ./client
-          npm ci
-          npm run build
-      - name: Create Deployable FOLDER
-      - run: |
-          ./createDeployable.sh
-      - name: Deploy
-      - uses: s0/git-publish-subdir-action@develop
-        env:
-          REPO: self
-          BRANCH: deploy
-          FOLDER: deploy
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+    - uses: actions/checkout@v2
+    - name: Use Node.js
+      uses: actions/setup-node@v2
+      with:
+        node-version: '16.14.0'
+        cache: 'npm'
+    - name: install rsync and npm build
+      run: |
+        sudo apt install rsync
+        cd ./client
+        npm ci
+        npm run build
+    - name: Create Deployable FOLDER
+      run: |
+        ./createDeployable.sh
+    - name: Deploy
+      uses: s0/git-publish-subdir-action@develop
+      env:
+        REPO: self
+        BRANCH: deploy
+        FOLDER: deploy
+        GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
